--- a/index.html
+++ b/index.html
@@ -241,7 +241,13 @@
     </div>
   </template>
 
-<script src="./js/map.js"></script>
+<script src="./js/common.js"></script>
+<script src="./js/rentObjects.js"></script>
+<script src="./js/activation.js"></script>
+<script src="./js/ads.js"></script>
+<script src="./js/map-tactics.js"></script>
+<script src="./js/validation.js"></script>
+<script src="./js/reset.js"></script>
 
 </body>
 </html>
