фильтры вывод в консоль

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 <script src="./js/map-tactics.js"></script>
 <script src="./js/validation.js"></script>
 <script src="./js/reset.js"></script>
+<script src="./js/map-filters.js"></script>
 
 </body>
 </html>
